--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
-                        <li class="active"><a href="#competencesContainterFluid">Nos compétences</a></li>
+                        <li><a href="#competencesContainterFluid">Nos compétences</a></li>
                         <li><a href="#servicesContainterFluid">Nos services</a></li>
                         <li><a href="#contactContainterFluid">Contact</a></li>
                     </ul>
@@ -57,67 +57,70 @@
             </div>
         </div>
         <div class="container-fluid space"></div>
-        <div class="container-fluid no-padding" id="competencesContainterFluid">
-            <div class="row row-eq-height">
-                <div class="col-md-4">
-                    <img src="/img/utilisables/leve.jpg" alt="leve au tacheometre. Topographie" width="100%" height="auto" class="img-responsive" />
-                </div>
-                <div class="col-md-8">
-                    <div class="row form-group">
-                        <div class="col-md-offset-3 col-md-6">
-                            <div id="Carousel" class="carousel slide">
-                                <ol class="carousel-indicators">
-                                    <li data-target="Carousel" data-slide-to="0" class="active"></li>
-                                    <li data-target="Carousel" data-slide-to="1"></li>
-                                    <li data-target="Carousel" data-slide-to="2"></li>
-                                    <li data-target="Carousel" data-slide-to="3"></li>
-                                </ol>
+        <div class="jumbotron" >
+            <h2 class="lobster">Nos compétences</h2>
+            <div class="container-fluid" id="competencesContainterFluid" >
+                <div class="row row-eq-height ">
+                    <div class="col-md-4 margin-shifted">
+                        <img src="/img/utilisables/leve.jpg" alt="leve au tacheometre. Topographie" width="100%" height="auto" class="img-responsive" />
+                    </div>
+                    <div class="col-md-8 margin-shifted">
+                        <div class="row form-group">
+                            <div class="col-md-offset-3 col-md-6">
+                                <div id="Carousel" class="carousel slide">
+                                    <ol class="carousel-indicators">
+                                        <li data-target="Carousel" data-slide-to="0" class="active"></li>
+                                        <li data-target="Carousel" data-slide-to="1"></li>
+                                        <li data-target="Carousel" data-slide-to="2"></li>
+                                        <li data-target="Carousel" data-slide-to="3"></li>
+                                    </ol>
 
-                                <div class="carousel-inner">
-                                    <div class="item active">
-                                        <img src="/img/utilisables/topometrie.jpg">
-                                        <div class="carousel-caption d-none d-md-block">
-                                            <h3>topometrie</h3>
-                                            <p>topometrie</p>
+                                    <div class="carousel-inner">
+                                        <div class="item active">
+                                            <img src="/img/utilisables/topometrie.jpg">
+                                            <div class="carousel-caption d-none d-md-block">
+                                                <h3>topometrie</h3>
+                                                <p>topometrie</p>
+                                            </div>
+                                        </div>
+                                        <div class="item">
+                                            <img src="/img/utilisables/photogrammetrie.jpg">
+                                            <div class="carousel-caption d-none d-md-block">
+                                                <h3>photogrammetrie</h3>
+                                                <p>photogrammetrie</p>
+                                            </div>
+                                        </div>
+                                        <div class="item">
+                                            <img src="/img/utilisables/informatique.jpg">
+                                            <div class="carousel-caption d-none d-md-block">
+                                                <h3>informatique</h3>
+                                                <p>informatique</p>
+                                            </div>
+                                        </div>
+                                        <div class="item">
+                                            <img src="/img/utilisables/cartographie.jpg">
+                                            <div class="carousel-caption d-none d-md-block">
+                                                <h3>cartographie</h3>
+                                                <p>cartographie</p>
+                                            </div>
                                         </div>
                                     </div>
-                                    <div class="item">
-                                        <img src="/img/utilisables/photogrammetrie.jpg">
-                                        <div class="carousel-caption d-none d-md-block">
-                                            <h3>photogrammetrie</h3>
-                                            <p>photogrammetrie</p>
-                                        </div>
-                                    </div>
-                                    <div class="item">
-                                        <img src="/img/utilisables/informatique.jpg">
-                                        <div class="carousel-caption d-none d-md-block">
-                                            <h3>informatique</h3>
-                                            <p>informatique</p>
-                                        </div>
-                                    </div>
-                                    <div class="item">
-                                        <img src="/img/utilisables/cartographie.jpg">
-                                        <div class="carousel-caption d-none d-md-block">
-                                            <h3>cartographie</h3>
-                                            <p>cartographie</p>
-                                        </div>
-                                    </div>
+
+                                    <a class="left carousel-control" href="#Carousel" data-slide="prev">
+                                        <span class="glyphicon glyphicon-chevron-left"></span>
+                                    </a>
+                                    <a class="right carousel-control" href="#Carousel" data-slide="next">
+                                        <span class="glyphicon glyphicon-chevron-right"></span>
+                                    </a>
                                 </div>
-
-                                <a class="left carousel-control" href="#Carousel" data-slide="prev">
-                                    <span class="glyphicon glyphicon-chevron-left"></span>
-                                </a>
-                                <a class="right carousel-control" href="#Carousel" data-slide="next">
-                                    <span class="glyphicon glyphicon-chevron-right"></span>
-                                </a>
                             </div>
                         </div>
-                    </div>
-                    <div class="row form-group">
+                        <div class="row form-group">
 
-                        <div class="col-md-offset-2 col-md-8">
-                            <p class="text-center">Les étudiants et étudiantes que nous recrutons sont en formation à l'École Nationale des Sciences Géographiques. Ces études leur permet d'acquérir rapidement des compétences dans l'univers du numérique et de l'information géographique.
-                            </p>
+                            <div class="col-md-offset-2 col-md-8">
+                                <p class="text-center">Les étudiants et étudiantes que nous recrutons sont en formation à l'École Nationale des Sciences Géographiques. Ces études leur permet d'acquérir rapidement des compétences dans l'univers du numérique et de l'information géographique.
+                                </p>
+                            </div>
                         </div>
                     </div>
                 </div>
