--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/fonts/lobster/lobster.css">
     <link rel="stylesheet" href="/fonts/tangerine/tangerine.css">
     <link rel="stylesheet" href="/includes/bootstrap-3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/includes/font-awesome-4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="/css/style.css">
 </head>
 
@@ -138,6 +139,9 @@
                     <div class="col-md-3">
                         <div class="panel margin-shifted-vertical">
                             <div class="panel-heading ">
+                              <div class="text-center">
+                                <i class="fa fa-code fa-5x"></i>
+                              </div>
                                 <h3 class="text-center text-uppercase helvetica">Développement</h3>
                             </div>
                             <div class="panel-body">
@@ -150,6 +154,9 @@
                     <div class="col-md-3">
                         <div class="panel margin-shifted-vertical">
                             <div class="panel-heading ">
+                              <div class="text-center">
+                                <i class="fa fa-globe fa-5x" aria-hidden="true" ></i>
+                            </div>
                                 <h3 class="text-center text-uppercase helvetica">Expertise</h3>
                             </div>
                             <div class="panel-body ">
@@ -162,6 +169,9 @@
                     <div class="col-md-3">
                         <div class="panel margin-shifted-vertical">
                             <div class="panel-heading ">
+                              <div class="text-center">
+                                <i class="fa fa-newspaper-o fa-5x"></i>
+                              </div>
                                 <h3 class="text-center text-uppercase helvetica">Formation</h3>
                             </div>
                             <div class="panel-body ">
